# authorization-registry

./: Cargo.toml  MIGRATION.md  README.md  openapi.json
.github/: cargo-fmt.yml
.github/workflows/: cargo-fmt.yml  frontend-build-check.yml  frontend-lint-check.yml  rust.yml
ar-frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
ar-frontend/src/: array-to-display.ts  auth.tsx  form-field-validators.ts  index.css  main.tsx  policy-set-templates.ts  routeTree.gen.ts
ar-frontend/src/components/: add-edit-policy-context.tsx  add-edit-policy-stepper.tsx  add-edit-policy.tsx  add-policy-context.tsx  add-policy-set-stepper.tsx  add-policy-stepper.tsx  add-policy.tsx  catch-boundary.tsx  confirm-dialog.tsx  create-policy-set-context.tsx  dexes-logo.tsx  email-icon.tsx  extra-typography.tsx  footer.tsx  form-field.tsx  header.tsx  logo-purple.tsx  logo-zwart.tsx  logo.tsx  main-button.tsx  modal-header.tsx  new-policy-set-template.tsx  new-policy-set.tsx  new-policy-template-stepper.tsx  page-container.tsx  page-loading-fallback.tsx  pagination.tsx  phone-icon.tsx  policy-card.tsx  policy-form.tsx  policy-set-detail-page.tsx  policy-set-list-page.tsx  policy-set-overview.tsx  wizzard-stepper.tsx
ar-frontend/src/icons/: attention-icon.tsx  check.tsx  key-icon.tsx  left-arrow-icons.tsx  slash-icon.tsx
ar-frontend/src/network/: config.ts  fetch.ts  idp.ts  policy-set-templates.ts  policy-set.ts
authorization-registry/: .gitignore  Cargo.toml  migrate.sh  run-with-logging.sh
authorization-registry/ar_entity/: Cargo.toml
authorization-registry/ar_entity/src/: company.rs  ishare_user.rs  policy.rs  policy_set.rs
authorization-registry/entity/: Cargo.toml
authorization-registry/entity/src/: audit_event.rs  delegation_evidence.rs  lib.rs  policy.rs  policy_set.rs  policy_set_template.rs  prelude.rs
authorization-registry/fixtures/: company1.json  company2.json  company3.json  policy1.json  policy2.json  policy3.json  policy_set1.json  policy_set2.json  policy_set3.json  policy_set4.json  policy_set5.json  policy_set6.json  policy_set7.json  policy_set_audit_log.json  user1.json  user2.json
authorization-registry/migration/: Cargo.toml
authorization-registry/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250127_143038_policy_set_template.rs  m20250613_125956_policy_set_template_description_column.rs  m20250619_124921_add_audit_log_table.rs  m20250624_113240_policy_set_creation_column.rs  m20250728_104738_audit_log_entry.rs  main.rs
authorization-registry/src/: config.rs  error.rs  fixtures.rs  main.rs  middleware.rs  seed.rs  test_helpers.rs  token_cache.rs  utils.rs
authorization-registry/src/db/: company.rs  mod.rs  policy.rs  policy_set_template.rs  user.rs
authorization-registry/src/routes/: admin.rs  audit_log.rs  capabilities.rs  config.rs  connect.rs  delegation.rs  mod.rs  policy_set.rs  policy_set_template.rs
authorization-registry/src/services/: audit_log.rs  delegation.rs  idp_connector.rs  ishare_provider.rs  mod.rs  pdp_provider.rs  policy.rs  server_token.rs
ishare/: Cargo.toml
ishare/src/: delegation_evidence.rs  pdp.rs
(+95 files in other folders)
