[package]
name = "authorization_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ishare = { path = "../ishare"}
ar_migration = { path = "ar_migration" }
ar_entity = { path = "ar_entity" }
axum = "0.7.5"
tokio = { version = "1.37.0", features = ['rt', 'rt-multi-thread'] } 
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tower = "0.4.13"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.203", features = ["derive"] }
sea-orm = { version = "0.12.15", features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls"] }
reqwest = { version = "0.12.4", features = ["json"] }
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = "0.4.38"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid"] }
sea-query = "0.30.7"
axum-macros = "0.4.1"
anyhow = { version = "1.0.86", features = ["backtrace"] }
thiserror = "1.0.61"
http-body-util = "0.1.2"
axum-extra = "0.9.3"
