[package]
name = "ar_entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ishare = "0.1.0"
sea-orm = { version = "0.12.15", features = ["macros", "sqlx-postgres"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
utoipa = { version = "5.2.0", features = ["uuid"] }
